# cassini

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  debug.py  pyproject.toml  ruff.toml
src/cassini/: __init__.py  cassini.py  cli.py  commands.py  exceptions.py  logging.py  printer.py  saturn_printer.py  simple_http_server.py  simple_mqtt_server.py  utils.py
src/cassini/rpp/: rpp.py  rpp.service
src/cassini/rpp/static/: script.js  styles.css
src/cassini/rpp/templates/: index.html
