[project]
name = "cassini"
version = "1.0.0"
description = "Interact with ELEGOO printers"
authors = [
    {name = "Vladimir Vukicevic", email = "?@?.com"},
]
dependencies = [
    "scapy==2.5.0",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "typer>=0.12.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
cassini = "cassini.cassini:app"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.1",
]
